force-app/main/default/objects/Specs_Quote_Forms__c/Specs_Quote_Forms__c.object-meta.xml
<CustomObject>
    <description>Related list shows specifications and master quote forms for national account records</description>
    <label>Specs &amp; Quote Form</label>
    <nameField>
        <label>Specs &amp; Quote Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specs &amp; Quote Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>