force-app/main/default/objects/Specs_Quote_Forms__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Specs &amp; Quote Forms</relationshipLabel>
    <relationshipName>Specs_Quote_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>