force-app/main/default/objects/Specs_Quote_Forms__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>National Account Brand name</description>
    <label>Brand</label>
    <length>30</length>
    <type>Text</type>
</CustomField>