force-app/main/default/objects/Specs_Quote_Forms__c/fields/Prototype__c.field-meta.xml
<CustomField>
    <fullName>Prototype__c</fullName>
    <description>National Account prototype</description>
    <label>Prototype</label>
    <length>30</length>
    <type>Text</type>
</CustomField>